# automated-data-catalog

./: .gitignore  BUILD.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
fixtures/dbt_project/: manifest.json  schema.yml
scripts/: gen_fixture.py
src/data_catalog/: __init__.py  cache.py  cli.py  cost.py  enricher.py  models.py  models_datahub.py  owner.py  parser.py  pii.py  renderer.py  resources.py  scanner.py
templates/: index.md.j2  lineage.mmd.j2  pii_report.md.j2  table.md.j2
tests/: conftest.py
tests/integration/: test_enrich_integration.py
tests/unit/: test_cache.py  test_cli_validate.py  test_cost.py  test_enricher.py  test_extras.py  test_parser.py  test_pii.py  test_renderer.py  test_scanner.py
