[project]
name = "data-catalog"
version = "0.1.0"
description = "Automated Data Catalog + Lineage Builder for dbt projects"
readme = "BUILD.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.50",
    "sqlglot[rs]",
    "networkx",
    "jinja2",
    "pydantic>=2.0",
    "typer",
    "httpx",
]

[project.optional-dependencies]
git = ["gitpython"]
dev = ["pytest", "pytest-cov", "ruff", "pyright", "pytest-mock"]

[project.scripts]
catalog = "data_catalog.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_catalog"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "data_catalog/templates"
"fixtures" = "data_catalog/fixtures"

[tool.pytest.ini_options]
markers = [
    "integration: requires a real manifest and ANTHROPIC_API_KEY (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py310"
